--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -1,22 +1,23 @@
 {
-    "version": "2.0.0",
     "tasks": [
         {
-            "type": "shell",
-            "label": "g++.exe build active file",
-            "command": "D:\\mingw64\\bin\\g++.exe",
+            "type": "cppbuild",
+            "label": "C/C++: gcc.exe 生成活动文件",
+            "command": "D:\\mingw64\\bin\\gcc.exe",
             "args": [
+                "-fdiagnostics-color=always",
                 "-g",
                 "${file}",
                 "-o",
                 "${fileDirname}\\${fileBasenameNoExtension}.exe",
-                "-lmingw32",
                 "-lSDL2main",
                 "-lSDL2",
-                "-mwindows"
+                "-lSDL2_image",
+                "-lSDL2_ttf",
+                "-lSDL2_mixer"
             ],
             "options": {
-                "cwd": "D:\\mingw64\\bin"
+                "cwd": "${fileDirname}"
             },
             "problemMatcher": [
                 "$gcc"
@@ -24,7 +25,9 @@
             "group": {
                 "kind": "build",
                 "isDefault": true
-            }
+            },
+            "detail": "调试器生成的任务。"
         }
-    ]
+    ],
+    "version": "2.0.0"
 }
